# map_merging_ROS

./: README.md
dataset_maps/: featureExtraction_results.xlsx
map_merging_pkg/: CMakeLists.txt  package.xml
map_merging_pkg/include/map_merging_pkg/: map_layers.h
map_merging_pkg/src/: feature_gridMap.cpp  map_layers.cpp  map_merging.cpp  matching_class.cpp  robotEntity_class.cpp
